netsuite/11.0/modules/ROOT/pages/netsuite-troubleshooting.adoc
= NetSuite Connector 11.0 Troubleshooting

You might encounter the following issues when working with the Anypoint Connector for NetSuite (NetSuite Connector):

* <<connectivity-test-failure, A connectivity test fails during application startup.>>
* <<logging-request-responses, The connector does not log requests and responses.>>
* <<permissions-error, The connector returns a permissions error when fetching metadata.>>
* <<search-entities, The connector is unable to search for certain types of objects.>>
* <<on-modified-object-triggers-new-objects, The *On Modified Object* source triggers new objects.>>

[[connectivity-test-failure]]
== Connectivity Test Failure During Application Startup

If a connectivity test fails during application startup and you see the following statement in the stack trace, configure a reconnection strategy for the connector:

[source,xml,linenums]
----
Caused by: java.lang.InterruptedException
	at java.util.concurrent.locks.AbstractQueuedSynchronizer.doAcquireSharedInterruptibly(AbstractQueuedSynchronizer.java:998) ~[?:1.8.0_221]
----

To configure a reconnection strategy for the connector in Anypoint Studio (Studio), add these lines to the *Configure XML* tab in the connector properties window:

[source,xml,linenums]
----
<reconnection failsDeployment="true">
	<reconnect count="2" frequency="5" />
</reconnection>
----

For example, the configuration XML for the connector might look like this after you add the reconnection strategy:

[source,xml,linenums]
----
<netsuite:config name="NetSuite_Config" doc:name="NetSuite Config" doc:id="8a4f73c2-e5e1-4f5d-8978-980069828ff0" >
    <netsuite:token-based-authentication-connection consumerKey="${netsuite.consumerKey}" consumerSecret="${netsuite.consumerSecret}" tokenId="${netsuite.tokenId}" tokenSecret="${netsuite.tokenSecret}" account="${netsuite.account}">
		<reconnection failsDeployment="true">
			<reconnect count="2" frequency="5" />
		</reconnection>
	</netsuite:token-based-authentication-connection>
----

In Studio, you can also use the *Advanced* tab in the connector properties window to configure a reconnection strategy. To do so, complete the following fields:

[%header%autowidth.spread]
|===
|Field |Value
|Reconnection strategy |`Standard`
|Frequency (ms) |`5`
|Reconnection Attempts |`2`
|===

[[logging-request-responses]]
== No Logging of Log Requests and Responses

To log requests and responses when using the connector, add this XML statement to the `Log4j` configuration file:

[source,xml,linenums]
----
<AsyncLogger
  name="org.mule.module.netsuite.extension.internal.connection.HttpWithCookieMessageDispatcher"
  level="DEBUG"/>
<Root level="debug">
    <AppenderRef ref="Console" />
</Root>
----

[[permissions-error]]
== Permissions Error When Fetching Metadata

To avoid receiving a permissions error when fetching metadata, enable the `Control SuiteScript and Workflow Triggers in Web Services Request` option in NetSuite for the role used in the connector configuration.

[[search-entities]]
== Inability to Search for Certain Types of Objects

There is a limitation in NetSuite's SuiteTalk API, that prevents you from searching for certain types of objects, such as Sales Order objects. Because of this limitation, you can't use the NetSuite Connector `Search` operation to locate these objects.

To perform a search for Sales Order objects and other unsupported objects, you can create a saved search and call it from the connector.

[[on-modified-object-triggers-new-objects]]
== On Modified Object Triggers New Objects

The *On Modified Object* source also triggers new objects. NetSuite populates the `lastModifiedDate` field when an object is created. When the *On Modified Objects* source polls objects based on `lastModifiedDate`, the *On Modified Object* source retrieves all new objects too, because all new objects have the `lastModifiedDate` field populated.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
